fixing more files to ignore

--- a/src/shm_comp_lab_app_josh_brendon/mainwindowfxmlscene.fxml
+++ b/src/shm_comp_lab_app_josh_brendon/mainwindowfxmlscene.fxml
@@ -38,6 +38,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -84,11 +85,13 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+        <Label alignment="CENTER" layoutX="19.0" layoutY="14.0" style="&#10;" text="AAA" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
           <font>
             <Font size="18.0" />
           </font>
         </Label>
+            <Pane layoutX="55.0" layoutY="48.0" prefHeight="200.0" prefWidth="200.0" />
+            <Pane layoutX="353.0" layoutY="48.0" prefHeight="200.0" prefWidth="200.0" />
       </children>
     </AnchorPane>
   </children>
